add translation controller
