# softwarepkg/controller/software_pkg.go
@@ -27,6 +27,7 @@ func AddRouteForSoftwarePkgController(r *gin.RouterGroup, pkgService app.Softwar
 	r.PUT("/v1/softwarepkg/:id/review/reject", m, ctl.Reject)
 	r.PUT("/v1/softwarepkg/:id/review/abandon", m, ctl.Abandon)
 	r.POST("/v1/softwarepkg/:id/review/comment", m, ctl.NewReviewComment)
+	r.GET("/v1/softwarepkg/translate/review/comment", m, ctl.TranslateReviewComment)
 }
 
 // ApplyNewPkg
@@ -226,5 +227,38 @@ func (ctl SoftwarePkgController) NewReviewComment(ctx *gin.Context) {
 		commonctl.SendFailedResp(ctx, code, err)
 	} else {
 		commonctl.SendRespOfCreate(ctx)
+	}
+}
+
+// TranslateReviewComment
+// @Summary get translate review comment
+// @Description get translate review comment
+// @Tags  SoftwarePkg
+// @Accept json
+// @Param    pkg_id         query	 string   true    "pkg_id of software package"
+// @Param    comment_id     query	 string   true    "comment_id of review comment"
+// @Param    language       query	 int      true    "language"
+// @Success 200 {object} app.TranslatedReveiwCommentDTO
+// @Failure 400 {object} ResponseData
+// @Router /v1/softwarepkg/translate/review/comment [get]
+func (ctl SoftwarePkgController) TranslateReviewComment(ctx *gin.Context) {
+	var req translationCommentQuery
+	if err := ctx.ShouldBindQuery(&req); err != nil {
+		commonctl.SendBadRequestParam(ctx, err)
+
+		return
+	}
+
+	cmd, err := req.toCmd()
+	if err != nil {
+		commonctl.SendBadRequestParam(ctx, err)
+
+		return
+	}
+
+	if v, code, err := ctl.service.TranslateReviewComment(&cmd); err != nil {
+		commonctl.SendFailedResp(ctx, code, err)
+	} else {
+		commonctl.SendRespOfGet(ctx, v)
 	}
 }
